syntax = "proto3";
import "NodeMsg.proto";

message SnapshotChunkMessage {

    repeated NodeProtoMsg chunks = 1;
    bytes manifestId = 2;

}